<resources>
    <string name="app_name">Discover Brussels</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_nav_map">Map</string>
    <string name="txt_nav_list">Musea</string>
    <string name="txt_nav_about">About</string>
    <string name="txt_nav_setting">Settings</string>
    <string name="btn_website">WEBSITE</string>
    <string name="btn_favorites">ADD TO FAVORITES</string>
    <string name="txt_button_lvstreetart">Streetart</string>
    <string name="txt_buton_lvMusea">Musea</string>
    <string name="txt_btn_lv_streetart">Streetart</string>
    <string name="txt_nav_item_list_streetart">Street Art</string>
    <string name="txt_nav_list_comics">Comic Book Murals</string>
    <string name="mi_filter">Filter</string>
    <string name="pu_musea">Musea</string>
    <string name="pu_streetart">Street Art</string>
    <string name="about">About</string>
    <string name="pu_comic">Comic Book Murals</string>
    <string name="pu_all">All</string>
    <string name="txt_distance">3.25\\nkm</string>

    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="txt_nav_item_update_data">Update Data</string>

    <string name="txt_toast_update_data">Updating Data...</string>

    <string name="txt_detail_illustrator">Illustrator: </string>
    <string name="txt_detail_featuring">Feat. </string>
    <string name="txt_btn_detail_museum_contact">contact</string>
    <string name="pu_favourites">Favourites</string>
    <string name="txt_menu_title_navigation">Navigation</string>
    <string name="txt_menu_help_support"><![CDATA[Help & Support]]></string>
</resources>
