<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/txt_nav_map" />
        <item
            android:id="@+id/nav_list"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/txt_nav_list" />
        <item
            android:id="@+id/nav_list_streetart"
            android:title="@string/txt_nav_item_list_streetart" />
        <item
            android:id="@+id/nav_list_comics"
            android:title="@string/txt_nav_list_comics" />
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/stat_notify_chat"
            android:title="@string/txt_nav_about" />
    </group>
    <item
        android:id="@+id/nav_update"
        android:title="Update Data" />

</menu>
